parser/src/test/resources/corpus/valid/18_let_date.ff
rule "Let Date" {
  let strike_date = 2026-03-31
}
