parser/src/test/resources/corpus/invalid/20_let_missing_value.ff
rule "Let Missing Value" {
  let x =
}
